Fix blurry playback icons

--- a/code/entities/projector/ProjectorOverlayPanel.razor.scss
+++ b/code/entities/projector/ProjectorOverlayPanel.razor.scss
@@ -7,7 +7,6 @@
         height: 50%;
         justify-content: center;
         align-items: center;
-        font-size: 48px;
         font-family: 'Material Icons';
         color: white;
         opacity: 1;
@@ -16,19 +15,21 @@
 
         &:intro {
             opacity: 0;
-            transform: scale(1.1);
+            transform: scale(1.5);
         }
 
         &:outro {
             opacity: 0;
+            transform: scale(1.5);
         }
     }
 
     .buffering-image {
-        width: 50px;
-        height: 50px;
+        width: 50%;
+        height: 50%;
         background-image: url('ui/bufferingcircle.png');
         background-size: contain;
+        background-position: center;
         background-repeat: no-repeat;
     }
 }
